; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_unwind.c_find_map.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/tools/perf/util/extr_unwind.c_find_map.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.map = type { i32 }
%struct.unwind_info = type { i32, i32 }
%struct.addr_location = type { %struct.map* }

@PERF_RECORD_MISC_USER = common dso_local global i32 0, align 4
@MAP__FUNCTION = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.map* (i32, %struct.unwind_info*)* @find_map to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.map* @find_map(i32 %0, %struct.unwind_info* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.unwind_info*, align 8
  %5 = alloca %struct.addr_location, align 8
  store i32 %0, i32* %3, align 4
  store %struct.unwind_info* %1, %struct.unwind_info** %4, align 8
  %6 = load %struct.unwind_info*, %struct.unwind_info** %4, align 8
  %7 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.unwind_info*, %struct.unwind_info** %4, align 8
  %10 = getelementptr inbounds %struct.unwind_info, %struct.unwind_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @PERF_RECORD_MISC_USER, align 4
  %13 = load i32, i32* @MAP__FUNCTION, align 4
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @thread__find_addr_map(i32 %8, i32 %11, i32 %12, i32 %13, i32 %14, %struct.addr_location* %5)
  %16 = getelementptr inbounds %struct.addr_location, %struct.addr_location* %5, i32 0, i32 0
  %17 = load %struct.map*, %struct.map** %16, align 8
  ret %struct.map* %17
}

declare dso_local i32 @thread__find_addr_map(i32, i32, i32, i32, i32, %struct.addr_location*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
